debug:m_propagator_PSV_FDSG_O4.f90 gradient_density modif:FWI:separate to main.f90 & sub_modeling_gradient.f90 modif:separate procedures for WPI from m_propagator_AC_FDSG_O4.f90 as extensions (tobe deliberated more)

--- a/Demo_future/03_AdjointTest/Makefile
+++ b/Demo_future/03_AdjointTest/Makefile
@@ -7,10 +7,27 @@ obj = \
 ../../Modules/System/*.o \
 ../../Modules/Etc/*.o \
 ../../Modules/Signal/*.o \
-../../Modules/Modeling/*.o
+../../Modules/Modeling/m_model.o \
+../../Modules/Modeling/m_shotlist_$(ShotDec).o \
+../../Modules/Modeling/m_shot.o \
+../../Modules/Modeling/m_computebox.o \
+../../Modules/Modeling/m_field.o \
+../../Modules/Modeling/m_cpml_$(Solver).o \
+../../Modules/Modeling/m_propagator_$(WaveEq)_$(Solver)_$(Order).o \
+../../Modules/Modeling/m_Modeling.o
 
 
-all : exe
+all : mod exe
+
+mod :
+	#System
+	(cd ../../Modules/System; make)
+	#Etc
+	(cd ../../Modules/Etc; make)
+	#Signal
+	(cd ../../Modules/Signal; make)
+	#Modeling
+	(cd ../../Modules/Modeling; make)
 
 exe : main.o
 	mpif90 $(FLAGF90) $(MOD) $(obj) $^ -o ../../exe/adjointtest_$(WaveEq)_$(Solver)_$(Order)
