--- a/Demo_future/03_AdjointTest/setup_simple.in
+++ b/Demo_future/03_AdjointTest/setup_simple.in
@@ -11,26 +11,24 @@ FR                      '40 10  0'
 DR                      '0  20 0'
 NR                      100
 
-SCOMP                   p
-RCOMP                   vz #'p vz'
+SCOMP                   vz
+RCOMP                   p #'p vz'
 
 #WAVELET_TYPE            ricker                                                              
 #T0                      0.5                                                                 
-FILE_WAVELET            'fricker_dt6000.su' 
+#FILE_WAVELET            'fricker_dt6000.su' 
 
-#IF_BLOOM        F
-#IF_HICKS        F
+IF_BLOOM        F
+IF_HICKS        F
 
 #IF_USE_RANDOM   F
 
 NT           500
 DT           0.006
 FPEAK        7
-RDT			0.006
+#RDT			0.006
 
 #SNAPSHOT     'p vz'
 #NSNAPSHOT    50
 
 IF_USE_CHECKPOINT   F
-
-DIR_OUT			'./'
