--- a/Demo_future/04_GradientTest/setup.in
+++ b/Demo_future/04_GradientTest/setup.in
@@ -1,7 +1,7 @@
 MODEL_SIZE              '101 101 1'
 MODEL_SPACING           '20 20 1'
 FILE_MODEL              'model'
-MODEL_ATTRIBUTES        vp #'vp rho'
+MODEL_ATTRIBUTES        vp rho #'vp rho'
 FILE_TOPO               'topo'
 
 IS_FREESURFACE          F
@@ -12,22 +12,27 @@ FR                      '40 10  0'
 DR                      '0  20 0'
 NR                      100
 
-SCOMP                   p
-RCOMP                   p #'p vz'
+SCOMP                   vx
+RCOMP                   vx #'p vz'
 
+#IF_HICKS        F
+#IF_BLOOM        F
 
 NT           500
 DT           0.006
 
 ## for FWI ##
-FILE_DATA_PREFIX    './results_fwd/dsyn_'
+FILE_DATA_PREFIX    './results_fwd/dsyn_Shot'
 WEIGHTING           'none'
 
 FPEAK        6.4
+WAVELET_TYPE        'ricker'
 UPDATE_WAVELET		'no'
 RDT			0
 
-PARAMETER           'vp:1000:2000'
+#PARAMETER           'vp:1000:2000'
+PARAMETER           'rho:800:2300'
+##PARAMETER           'vp:1000:2000 vs:577:1155 rho:1000:2300'
 
 SMOOTHING     'none'
 #PRECO         'z^0'
