--- a/FWI/Makefile
+++ b/FWI/Makefile
@@ -14,7 +14,7 @@ obj = \
 ../Modules/Modeling/m_field.o \
 ../Modules/Modeling/m_cpml_$(Solver).o \
 ../Modules/Modeling/m_propagator_$(WaveEq)_$(Solver)_$(Order).o \
-../Modules/Modeling/m_Modeling.f90 \
+../Modules/Modeling/m_Modeling.o \
 ../Modules/Kernel/m_parametrizer_$(Param).o \
 ../Modules/Kernel/m_querypoint.o \
 ../Modules/Kernel/m_weighter.o \
@@ -43,7 +43,7 @@ mod :
 	#Optimization
 	(cd ../Modules/Optimization; make App=FWI)
 
-exe : main.o
+exe : sub_modeling_gradient.o main.o
 	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/fwi_$(WaveEq)_$(Solver)_$(Order)_$(Param)_$(LineS)_$(Optim)
 	(cd ../exe; ln -sf fwi_$(WaveEq)_$(Solver)_$(Order)_$(Param)_$(LineS)_$(Optim) FWI )
 
