--- a/Demo_future/04_GradientTest/setup.in
+++ b/Demo_future/04_GradientTest/setup.in
@@ -13,7 +13,7 @@ DR                      '0  20 0'
 NR                      100
 
 SCOMP                   vx
-RCOMP                   vx #'p vz'
+RCOMP                   p #'p vz'
 
 #IF_HICKS        F
 #IF_BLOOM        F
@@ -30,8 +30,8 @@ WAVELET_TYPE        'ricker'
 UPDATE_WAVELET		'no'
 RDT			0
 
-#PARAMETER           'vp:1000:2000'
-PARAMETER           'rho:800:2300'
+PARAMETER           'vp:1000:2000'
+#PARAMETER           'rho:800:2300'
 ##PARAMETER           'vp:1000:2000 vs:577:1155 rho:1000:2300'
 
 SMOOTHING     'none'
@@ -43,7 +43,7 @@ SMOOTHING     'none'
 #MREF            '1 1'
 
 #DESCENT_DIR     'random'  #'-curr%pg'
-ALPHAS          '1e-5 1e-3 1e-1 1'
+ALPHAS          '1e-5 1e-3 1e-1 1 1e1'
 #ALPHAS          '1e-3 5e-3 1e-2 5e-2 1e-1 5e-1 1'
 #ALPHAS          '0.'
 #ALPHAS          '-1e-3 -1e-2 -1e-1 -1 -1e1'
