--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #####################################
 # Don't track these files & folders #
 #####################################
-Doc/
+#Doc/
 Demo/
 devel/
 exe/
@@ -9,8 +9,8 @@ mod/
 philosophy.odp
 Validations/
 test
-compiler.inc
-modules.inc
+#compiler.inc
+#modules.inc
 
 
 
