--- a/Modules/Modeling/Makefile
+++ b/Modules/Modeling/Makefile
@@ -9,7 +9,8 @@ m_shotlist_$(ShotDec).f90 \
 m_shot.f90 \
 m_computebox.f90 \
 m_field.f90 \
-m_cpml_$(Solver).f90 \
+m_correlation.f90 \
+m_cpml.f90 \
 m_propagator_$(WaveEq)_$(Solver)_$(Order).f90 \
 m_Modeling.f90
 
