--- a/Demo/04_GradientTest/setup.in
+++ b/Demo/04_GradientTest/setup.in
@@ -1,18 +1,18 @@
 MODEL_SIZE              '101 101 1'
 MODEL_SPACING           '20 20 1'
 FILE_MODEL              'model'
-MODEL_ATTRIBUTES        vp rho #'vp rho'
+MODEL_ATTRIBUTES        vp #'vp rho'
 FILE_TOPO               'topo'
 
 IS_FREESURFACE          F
 
 ACQUI_GEOMETRY          spread
-FS                      '50 505 500'
-FR                      '40 10  0'
-DR                      '0  20 0'
+FS                      '20 500 0'
+FR                      '40 20  0'
+DR                      '0  20  0'
 NR                      100
 
-SCOMP                   vx
+SCOMP                   p
 RCOMP                   p #'p vz'
 
 #IF_HICKS        F
@@ -22,7 +22,7 @@ NT           500
 DT           0.006
 
 ## for FWI ##
-FILE_DATA_PREFIX    './results_fwd/dsyn_Shot'
+FILE_DATA_PREFIX    'results_fwd/dsyn_Shot'
 WEIGHTING           'none'
 
 FPEAK        6.4
@@ -30,14 +30,14 @@ WAVELET_TYPE        'ricker'
 UPDATE_WAVELET		'no'
 RDT			0
 
-PARAMETER           'vp:1000:2000'
-#PARAMETER           'rho:800:2300'
-##PARAMETER           'vp:1000:2000 vs:577:1155 rho:1000:2300'
+#PARAMETER           'vp2:2250000:11560000'
+PARAMETER            'tDt:-500000:500000'
 
 SMOOTHING     'none'
 #PRECO         'z^0'
 
-#JOB             gradient
+#JOB             'forward modeling'
+JOB             'build tilD gradient'
 
 #DNORMALIZERS    '1 1'
 #MREF            '1 1'
@@ -53,7 +53,7 @@ ALPHAS          '1e-5 1e-3 1e-1 1 1e1'
 #LS_SCALING  'none'
 
 
-#SNAPSHOT     'p vz'
+SNAPSHOT     p
 #NSNAPSHOT    50
 
 IF_USE_CHECKPOINT   F
