--- a/FWI/Makefile
+++ b/FWI/Makefile
@@ -3,6 +3,9 @@ include ../compiler.inc
 include ../modules.inc
 
 
+APP = FWI
+app = $(shell echo $(APP) | tr A-Z a-z)
+
 obj = \
 ../Modules/System/*.o \
 ../Modules/Etc/*.o \
@@ -39,13 +42,13 @@ mod :
 	#Modeling
 	(cd ../Modules/Modeling; make)
 	#Kernel
-	(cd ../Modules/Kernel; make App=FWI)
+	(cd ../Modules/Kernel; make App=$(APP))
 	#Optimization
-	(cd ../Modules/Optimization; make App=FWI)
+	(cd ../Modules/Optimization; make App=$(APP))
 
 exe : sub_modeling_gradient.o main.o
-	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/fwi_$(WaveEq)_$(Solver)_$(Order)_$(Param)_$(LineS)_$(Optim)
-	(cd ../exe; ln -sf fwi_$(WaveEq)_$(Solver)_$(Order)_$(Param)_$(LineS)_$(Optim) FWI )
+	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/$(app)_$(WaveEq)_$(Solver)_$(Order)_$(Param)_$(LineS)_$(Optim)
+	(cd ../exe; ln -sf $(app)_$(WaveEq)_$(Solver)_$(Order)_$(Param)_$(LineS)_$(Optim) $(APP) )
 
 clean :
 	-rm main.o
@@ -63,5 +66,5 @@ cleanall :
 	(cd ../Modules/Kernel; make clean)
 	#Optimization
 	(cd ../Modules/Optimization; make clean)
-	#FWI
+	#$(APP)
 	make clean
