--- a/Demo/04_GradientTest/setup.in
+++ b/Demo/04_GradientTest/setup.in
@@ -4,6 +4,8 @@ FILE_MODEL              'model'
 MODEL_ATTRIBUTES        vp #'vp rho'
 FILE_TOPO               'topo'
 
+#TDT_FROM                'none'
+
 IS_FREESURFACE          F
 
 ACQUI_GEOMETRY          spread
@@ -30,14 +32,16 @@ WAVELET_TYPE        'ricker'
 UPDATE_WAVELET		'no'
 RDT			0
 
-#PARAMETER           'vp2:2250000:11560000'
-PARAMETER            'tDt:-500000:500000'
+PARAMETER           'vp2:2250000:11560000'
+#PARAMETER            'tilD:-500000:500000'
+#PARAMETER            'tDt:-500000:500000'
 
 SMOOTHING     'none'
 #PRECO         'z^0'
 
 #JOB             'forward modeling'
-JOB             'build tilD gradient'
+#JOB             'build tilD gradient'
+JOB             'update velocity gradient'
 
 #DNORMALIZERS    '1 1'
 #MREF            '1 1'
