--- a/Demo/04_GradientTest/setup.in
+++ b/Demo/04_GradientTest/setup.in
@@ -4,15 +4,17 @@ FILE_MODEL              'model'
 MODEL_ATTRIBUTES        vp #'vp rho'
 FILE_TOPO               'topo'
 
-#TDT_FROM                'none'
+TILD_FROM               'none'
 
 IS_FREESURFACE          F
 
 ACQUI_GEOMETRY          spread
-FS                      '20 500 0'
-FR                      '40 20  0'
+FS                      '20 40 0'
+#FR                      '40 20  0'
+FR                      '40 1960 0'
 DR                      '0  20  0'
-NR                      100
+#NR                      100
+NR                      1
 
 SCOMP                   p
 RCOMP                   p #'p vz'
@@ -24,30 +26,32 @@ NT           500
 DT           0.006
 
 ## for FWI ##
-FILE_DATA_PREFIX    'results_fwd/dsyn_Shot'
+FILE_DATA_PREFIX    'results_fwd/denv_Shot'
 WEIGHTING           'none'
 
 FPEAK        6.4
 WAVELET_TYPE        'ricker'
+T0                  0.35
 UPDATE_WAVELET		'no'
 RDT			0
 
-PARAMETER           'vp2:2250000:11560000'
+#PARAMETER           'vp2:2250000:11560000'
 #PARAMETER            'tilD:-500000:500000'
-#PARAMETER            'tDt:-500000:500000'
+PARAMETER            'tilD:-5:5'
 
 SMOOTHING     'none'
 #PRECO         'z^0'
 
 #JOB             'forward modeling'
-#JOB             'build tilD gradient'
-JOB             'update velocity gradient'
+#JOB             'estimate wavelet'
+JOB             'build tilD gradient'
+#JOB             'update velocity gradient'
 
 #DNORMALIZERS    '1 1'
 #MREF            '1 1'
 
 #DESCENT_DIR     'random'  #'-curr%pg'
-ALPHAS          '1e-5 1e-3 1e-1 1 1e1'
+#ALPHAS          '1e-5 1e-3 1e-1 1 1e1'
 #ALPHAS          '1e-3 5e-3 1e-2 5e-2 1e-1 5e-1 1'
 #ALPHAS          '0.'
 #ALPHAS          '-1e-3 -1e-2 -1e-1 -1 -1e1'
