--- a/FWD/Makefile
+++ b/FWD/Makefile
@@ -14,6 +14,7 @@ obj = \
 ../Modules/Modeling/m_shotlist_$(ShotDec).o \
 ../Modules/Modeling/m_shot.o \
 ../Modules/Modeling/m_computebox.o \
+../Modules/Modeling/m_correlate.o \
 ../Modules/Modeling/m_field.o \
 ../Modules/Modeling/m_cpml.o \
 ../Modules/Modeling/m_propagator_$(WaveEq)_$(Solver)_$(Order).o \
