change of mind (again), from Born-based Env modeling to WaveEq-based exact Env modeling although gradient terms related to D (ie to the phase) are deliberately neglected (otherwise would be equiv to chain-rule) and the adjoint PDE has tobe split (ie. Born-based modeling) to be stable

--- a/PFEI/Makefile
+++ b/PFEI/Makefile
@@ -49,7 +49,8 @@ mod :
 
 #exe : sub_modeling_gradient.o main.o
 #exe : sub_modeling_gradient_reconstruct.o main.o
-exe : sub_modeling_gradient_reconstruct2.o main.o
+#exe : sub_modeling_gradient_reconstruct2.o main.o
+exe : sub_modeling_gradient_exactenv.o main.o
 	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/$(app)_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim)
 	(cd ../exe; ln -sf $(app)_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim) $(APP) )
 
