debug:singleton.f90 FFT does NOT allow index slicing, so removing zero padding in m_Hilbert.f90 transforms

--- a/Tools/envelope/Makefile
+++ b/Tools/envelope/Makefile
@@ -16,11 +16,12 @@ mod :
 	(cd ../../Modules/Etc; make)
 	(cd ../../Modules/Signal; make m_Hilbert.o)
 
+#exe : test.o
 exe : main.o
 	mpif90 $(FLAGF90) $(MOD) $(obj) $^ -o ../../exe/envelope
 
 clean :
-	-rm main.o
+	-rm test.o main.o
 
 cleanall :
 	(cd ../../Modules/System; make clean)
