update after merge

--- a/Modules/Signal/Makefile
+++ b/Modules/Signal/Makefile
@@ -11,6 +11,7 @@ m_wavelet.f90 \
 m_matchfilter.f90 \
 m_Hilbert.f90 \
 m_Lpnorm.f90 \
+m_Envnorm.f90 \
 m_pseudotime.f90 \
 m_smoother_Laplacian_sparse.f90
 
